# pubrepo

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pubrepo.py  pyproject.toml
.github/workflows/: ci.yml
docs/: config.md  demo.tape  integrating-changes.md
tests/: conftest.py  test_cli.py  test_diff_message.py  test_divergence.py  test_errors.py  test_init.py  test_integrate.py  test_lock_keep.py  test_log_signal.py  test_matcher.py  test_multitarget.py  test_phase_a.py  test_scrub.py  test_smoke.py  test_status_validate.py  test_transforms.py
